--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx webpack; npx gulp build;"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.13.16",
+    "babel-loader": "^8.2.2",
     "gulp": "^4.0.2",
     "gulp-cssnano": "^2.1.3",
     "gulp-less": "^4.0.1",
     "gulp-plumber": "^1.2.1",
-    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.35.1",
+    "webpack-cli": "^4.6.0",
     "webpack-stream": "^6.1.2"
   }
 }
